this is edit css and add js file by ganeshB

--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
     padding: 0;
 }
 body{
- background-color: antiquewhite;
+ background-color: rgb(207, 170, 123);
+
 
 }
 nav{
@@ -31,4 +32,80 @@ nav ul li{
     font-weight:bolder;
     font-size: 1.3rem;
     
+}
+.container{
+    /* min-height: 80vh;
+    background-color: rgb(75, 49, 49);
+    color: white;
+    display: flex;
+    margin: 23px auto;
+    width: 80%;
+    border-radius: 20px;
+    padding: 34px;
+    background-image: url(bg.jpg); */
+    background-color: rgb(178, 123, 123);
+    color: white;
+    margin: 25px auto;
+    width: 80%;
+    min-height: 60vh;
+    border-radius: 20px;
+    padding: 10px 10px;
+    background-image: url(bg.jpg);
+    bottom: 0;
+
+
+    
+}
+.bottom{
+    
+    /* background-color: blueviolet; */
+    background-color: rgb(81, 69, 51);
+  
+    height: 100px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;flex-direction: column;
+   
+  
+
+    
+
+
+}
+#myProgressBar{
+    width: 80vw;
+
+}
+.icons{
+    margin-top: 14px;
+}
+.icons i{
+    cursor: pointer;
+    margin-left: 20px;
+    color: white;
+    
+}
+.songItem{
+    background-color: aliceblue;
+    color: black;
+    width: 50%;
+    margin: 10px 0;
+    height: 50px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 22px;
+    
+
+}
+.songItem img{
+    height: 40px;
+    width: 40px;
+    margin-left: 5px;
+    border-radius: 30px;
+}
+.songItem i{
+    margin: 5px;
 }
